# VO

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  run_vo.py
.omo/: boulder.json
.omo/notepads/superpoint-visual-odometry/: learnings.md
.omo/plans/: superpoint-visual-odometry.md  superpoint-vo-baselines.md
.omo/run-continuation/: ses_17be66111ffeOupRJJRB4eW04b.json  ses_17c120311ffed8uqqjfrEubLfG.json  ses_17c2c0bcdffeLh2ZZHZu90owNb.json
baselines/: README.md  __init__.py  minislam_wrapper.py  pyslam_run.py  pyslam_wrapper.py
data/: .gitignore
docs/: baseline_comparison.md  depth_prior_evaluation_notes.md  evaluation_report_v2.md  tech-decisions.md  visual_odometry_comprehensive_survey.md  visual_odometry_research_roadmap.md
eval/: compare.py
scripts/: download_data.py  gen_kitti_fixtures.py  generate_stereo_depth.py  generate_synthetic.py  setup_baseline.sh
slam_dnn/: __init__.py  __main__.py  camera.py  cli.py  config.py  depth.py  eval.py  exceptions.py  export.py  features.py  io.py  keyframe.py  kitti_loader.py  local_ba.py  matching.py  motion_model.py  pose.py  trajectory.py  visualization.py  vo.py
slam_dnn/testdata/: synthetic.py
tests/: conftest.py  synthetic_scene.py  test_baseline_wrapper.py  test_camera.py  test_cli.py  test_compare.py  test_depth_prior.py  test_e2e.py  test_edge_cases.py  test_eval.py  test_export.py  test_features.py  test_io.py  test_joint_ba.py  test_kitti_loader.py  test_matching.py  test_pose.py  test_prototype_robustness.py  test_synthetic_data.py  test_synthetic_vo.py  test_trajectory.py  test_visualization.py  test_vo.py  test_xfeat.py
