[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slam-dnn"
version = "0.1.0"
description = "SuperPoint-based visual odometry library for teaching and research"
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
include = ["slam_dnn*"]
