[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slam-dnn"
version = "0.1.0"
description = "SuperPoint-based monocular visual odometry library for camera trajectory estimation"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [
    {name = "SLAM-DNN Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
lightglue = ["lightglue"]

[tool.setuptools.packages.find]
include = ["slam_dnn*"]